--- a/src/components/Banner/style.scss
+++ b/src/components/Banner/style.scss
@@ -1,4 +1,4 @@
-@import '../../styles/common/variables';
+@import "../../styles/common/variables";
 
 .Banner {
   display: flex;
@@ -25,6 +25,7 @@
     letter-spacing: 0;
     color: #0b0c0f;
     text-align: left;
+    width: 1500px;
   }
 
   &__content {
@@ -43,5 +44,11 @@
     width: 20px;
     height: 20px;
     margin: 8px;
+  }
+  &__close {
+    text-align: right;
+    width: -webkit-fill-available;
+    height: 20px;
+    align-items: end;
   }
 }
