--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -11,17 +11,16 @@
     border-radius: 5px;
     opacity: 0;
     transform: translateY(-100%);
-    transition: opacity .3s ease-in-out;
-    clip-path:
-      polygon(
-        0% 0%,
-        100% 0%,
-        100% calc(100% - 6px),
-        100% 100%,
-        calc(100% - 8px) calc(100% - 6px),
-        0% calc(100% - 6px)
-      );
-    justify-items: end;
+    transition: opacity 0.3s ease-in-out;
+    clip-path: polygon(
+      0% 0%,
+      100% 0%,
+      100% calc(100% - 6px),
+      100% 100%,
+      calc(100% - 8px) calc(100% - 6px),
+      0% calc(100% - 6px)
+    );
+    right: 0;
 
     &.visible {
       opacity: 1;
