--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -4,7 +4,7 @@
   .tooltip {
     position: absolute;
     width: max-content;
-    margin: 0 10px;
+    margin: 5px 10px;
     padding: 10px;
     color: #fff;
     background-color: #333;
