--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -162,9 +162,19 @@ $offsetTop: 200px;
       color: $c_white;
       background-color: #1f252e;
       opacity: 0;
+      border-radius: 2px;
       visibility: hidden;
       transition: visibility 0.3s linear, opacity 0.3s linear;
       transition-delay: 0.1s;
+      &__title {
+        //styleName: h10;
+        font-family: $font-primary;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0px;
+        text-align: left;
+      }
       &__button {
         color: #6c6cff;
         margin-top: 20px;
@@ -172,6 +182,17 @@ $offsetTop: 200px;
           text-decoration: underline;
           cursor: pointer;
         }
+      }
+      &__body {
+        //styleName: Base 5;
+        font-family: $font-secondary;
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 16px;
+        letter-spacing: 0.25px;
+        text-align: left;
+        color: #a7aeb7;
+        margin: 4px 0 4px 0;
       }
     }
     &:hover &__modal {
