--- a/src/components/roadmap-page/GlossaryTeams/style.scss
+++ b/src/components/roadmap-page/GlossaryTeams/style.scss
@@ -76,6 +76,7 @@
       overflow-x: hidden;
       white-space: nowrap;
       overflow-y: hidden;
+      -webkit-overflow-scrolling: touch;
     }
 
     &__cards {
