--- a/src/components/Tooltip/style.scss
+++ b/src/components/Tooltip/style.scss
@@ -4,8 +4,8 @@
   .tooltip {
     position: absolute;
     width: max-content;
-    margin: 5px 10px;
-    padding: 10px;
+    margin: -3px 8px;
+    padding: 15px 15px 18px 15px;
     color: #fff;
     background-color: #333;
     border-radius: 5px;
