--- a/src/pages/roadmap/style.scss
+++ b/src/pages/roadmap/style.scss
@@ -1,5 +1,5 @@
-@import '../../styles/_main.scss';
-@import '../style.scss';
+@import "../../styles/_main.scss";
+@import "../style.scss";
 
 .RoadmapPage {
   &__hero-wrapper {
@@ -21,7 +21,6 @@
 
       &__title {
         @include h1;
-
         color: $c_white;
       }
 
@@ -35,6 +34,7 @@
 
     &__image {
       position: relative;
+      width: 606px;
 
       &__foreground {
         position: absolute;
@@ -68,66 +68,11 @@
     padding: 24px;
     cursor: pointer;
     background-color: $c_white;
-    transition: all .3s;
+    transition: all 0.3s;
 
     &:hover {
       transform: translate(-7.2px, -8px);
       box-shadow: 7.2px 8px 0 0 $c_blue-ribbon;
-    }
-
-    &__icon {
-      display: grid;
-      width: 48px;
-      height: 48px;
-      border: 1px solid rgba(163, 195, 242, .19);
-      border-radius: 50%;
-      place-items: center;
-
-      & > svg {
-        width: 32px;
-      }
-
-      &--twitter {
-        background-color: rgba(29, 155, 240, .15);
-
-        & > svg {
-          width: 21px;
-          fill: rgba(29, 155, 240, 1);
-        }
-      }
-
-      &--discord {
-        background-color: rgba(88, 101, 242, .15);
-      }
-
-      &--gleev {
-        background-color: rgba(64, 56, 255, .15);
-      }
-
-      &--reddit {
-        background-color: rgba(255, 69, 0, .15);
-      }
-
-      &--github {
-        background-color: rgba(92, 100, 117, .15);
-
-        & > svg {
-          width: 21px;
-          fill: rgba(92, 100, 117, 1);
-        }
-      }
-
-      &--handbook {
-        background-color: rgba(54, 129, 252, .1);
-      }
-
-      &--element {
-        background-color: rgba(13, 189, 139, .15);
-      }
-
-      &--youtube {
-        background-color: rgba(255, 0, 0, .15);
-      }
     }
 
     &__title {
