--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -283,7 +283,7 @@ $offsetTop: 300px;
       width: 48px;
       height: 48px;
       // background-color: #4038ff;
-      background-image: url("../../../assets/images/link_disable.png");
+      background-image: url("../../../assets/svg/Goal card icon button.svg");
       background-repeat: no-repeat;
       background-size: cover;
       border-radius: 50%;
