--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -140,7 +140,7 @@
     border-radius: 4px;
     transform: translateY(-100%);
     transition: transform 400ms ease 0s;
-
+    margin-left: -25px;
     &--active {
       transform: translateY(0%);
     }
@@ -380,7 +380,7 @@
       margin-top: 10px;
       background-color: #2f2ff4;
       transform: unset;
-
+      margin-left: 0px;
       &--active {
         display: flex;
       }
