--- a/src/components/TextSlider/style.scss
+++ b/src/components/TextSlider/style.scss
@@ -1,3 +1,17 @@
+.TextSlider{
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  justify-content: center;
+
+  &__item{
+    display: flex;
+    align-items: center;
+    height: 50px;
+  }
+}
 .TextSlider__button {
   position: absolute;
   display: flex;
@@ -5,7 +19,7 @@
   justify-content: center;
   width: 50px;
   height: 50px;
-  margin-top: -40px;
+
   cursor: pointer;
   border-radius: 50%;
 
@@ -21,9 +35,11 @@
 
   &--backward {
     left: 50px;
+    transform: translateX(-100%);
   }
 
   &--forward {
     right: 50px;
+    transform: translateX(100%);
   }
 }
