--- a/src/components/about-page/Press/style.scss
+++ b/src/components/about-page/Press/style.scss
@@ -56,11 +56,16 @@
 
     &__story {
       display: flex;
+      width: 1242px;
       height: 484px;
-      margin-top: 32px;
+      margin-top: 80px;
       padding: 48px 0 0 48px;
+      overflow: hidden;
       background-color: #111316;
-      gap: 54px;
+      border-radius: 12px;
+      transition: outline .25s;
+      transition-timing-function: cubic-bezier(.03, .5, .25, 1);
+      gap: 96px;
 
       &__about {
         max-width: 330px;
@@ -82,7 +87,7 @@
           color: #6c6cff;
         }
 
-        &__platform-name {
+        &__title {
           @include h5;
 
           margin-top: 64px;
@@ -117,6 +122,9 @@
       &__visual {
         position: relative;
         max-width: 720px;
+        transform: translateY(8px);
+        transition: transform .25s;
+        transition-timing-function: cubic-bezier(.03, .5, .25, 1);
 
         &__bottom-gradient {
           position: absolute;
@@ -125,6 +133,114 @@
           height: 100%;
           height: 136px;
           background: linear-gradient(180deg, rgba(17, 19, 22, 0) 0%, #111316 100%);
+          transition: opacity .25s;
+          transition-timing-function: cubic-bezier(.03, .5, .25, 1);
+        }
+      }
+
+      &:hover {
+        outline: 1px solid #5c6475;
+
+        .AboutPage__press__story__visual {
+          transform: translateY(0);
+
+          &__bottom-gradient {
+            opacity: 0;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1440px) {
+    &__press {
+      &__story {
+        width: 980px;
+        height: 435px;
+        padding: 36px 0 0 36px;
+        gap: 24px;
+
+        &__about {
+          max-width: 250px;
+
+          &__title {
+            @include h6;
+          }
+
+          &__platform-description {
+            @include base-4;
+          }
+        }
+
+        &__visual {
+          max-width: 650px;
+          transform: translateY(12px);
+        }
+
+        &:hover {
+          .AboutPage__press__story__visual {
+            transform: translateY(4px);
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1050px) {
+    &__press {
+      &__story {
+        flex-direction: column;
+        height: auto;
+        max-width: 600px;
+        margin-top: 64px;
+
+        &__about {
+          max-width: 400px;
+        }
+
+        &__visual {
+          max-width: 520px;
+          transform: translateY(12px);
+        }
+      }
+    }
+  }
+
+  @media #{$screen-max-sm} {
+    &__press {
+      &__header {
+        &__title {
+          @include h4;
+        }
+      }
+
+      &__story {
+        width: auto;
+        height: auto;
+        max-width: 480px;
+        padding: 24px 0 0 24px;
+
+        &__about {
+          max-width: 400px;
+          padding-right: 24px;
+        }
+
+        &__visual {
+          width: 100%;
+          height: 300px;
+          transform: translateY(12px);
+
+          &__image {
+            position: absolute;
+            width: 480px;
+            max-width: 480px;
+          }
+        }
+
+        &:hover {
+          .AboutPage__press__story__visual {
+            transform: translateY(8px);
+          }
         }
       }
     }
