add related term hover event

--- a/src/components/glossary-page/Glossary_body/style.scss
+++ b/src/components/glossary-page/Glossary_body/style.scss
@@ -146,6 +146,9 @@
       background: #5c6475;
       border-radius: 8px;
       cursor: pointer;
+      &:hover{
+        background-color: #A7AEB7;
+      }
     }
   }
   @media (max-width: 1024px) {
