--- a/src/components/roadmap-page/GlossaryTeams/style.scss
+++ b/src/components/roadmap-page/GlossaryTeams/style.scss
@@ -62,7 +62,13 @@
       width: 15px;
     }
     &__inputbox {
+      padding: 16px 18px;
       padding-left: 48px;
+      font-size: 20px;
+      line-height: 24px;
+      &::placeholder {
+        color:#A7AEB7;
+      }
     }
   }
 
