--- a/src/components/roadmap-page/QuarterPanel/style.scss
+++ b/src/components/roadmap-page/QuarterPanel/style.scss
@@ -219,6 +219,7 @@ $offsetTopMobile: 200px;
     text-decoration: underline;
     position: relative;
     display: inline-block;
+    cursor: pointer;
     &__modal {
       position: absolute;
       width: 240px;
